--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "gh-pages": "^6.1.0",
+    "semantic-ui-css": "^2.5.0",
     "vite": "^5.0.10"
   }
 }
