--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^6.1.0",
     "pinia": "^2.1.7",
     "semantic-ui-css": "^2.5.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vue-router": "^4.2.5"
   }
 }
